kubernetes/apps/observability/coroot/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coroot
  namespace: observability
  annotations:
    glance/name: Coroot
    glance/show: "true"
    glance/icon: https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/coroot.png
    glance/description: "Observability and infrastructure monitoring."
spec:
  hostnames:
    - coroot.juno.moe
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: coroot-coroot
          namespace: observability
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
